--- a/examples/rollup/package.json
+++ b/examples/rollup/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nighttrax/rollup-example",
+  "name": "test",
   "private": true,
   "version": "1.0.0",
   "main": "dist/index.js",
@@ -9,7 +9,9 @@
     "test": "yarn run build"
   },
   "dependencies": {
-    "@nighttrax/foo": "*"
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3"
+
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "~8.3.0",
