--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint": "~8.3.0",
     "eslint-plugin-import": "~2.25.0",
     "lerna": "~4.0.0",
-    "react": "~17.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "~4.5.0"
   }
 }
