--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,19 +1,26 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
-    "sourceMap": true,
+    "baseUrl": ".",
+    "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "noEmitOnError": true,
+    "noImplicitThis": true,
+    "allowSyntheticDefaultImports": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "ESNext",
+    "target": "ESNext",
+    "lib": ["es2015", "dom"],
+    "importHelpers": true,
+    "sourceMap": true,
+    "noEmitOnError": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "types": [],
     "jsx": "react",
-    "noEmit": false
+    "moduleResolution": "node",
+    "noUnusedLocals": false,
+    "noImplicitAny": false,
+    "strict": false,  
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules", "dist", "typings", "**/__test__", "test", "docs", "tests"]
 }
