--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -13,6 +13,9 @@
     "prepublishOnly": "yarn run build",
     "test": "yarn run build"
   },
+  "dependencies": {
+    "@noplugin/core": "1.0.0"
+  },
   "devDependencies": {
     "rimraf": "~3.0.2",
     "typescript": "~4.5.0"
