--- a/examples/rollup/package.json
+++ b/examples/rollup/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@rollup/plugin-commonjs": "^21.0.2",
-    "@rollup/plugin-node-resolve": "^13.1.3"
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@noplugin/core": "1.0.0",
+    "@noplugin/view": "1.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "~8.3.0",
